...

class EntitiesScreen extends React.Component {
  render() {
    return (
      <ScrollView style={styles.container} testID="entityScreenScrollList">
        <Text style={styles.centerText}>JHipster Entities will appear below</Text>
        <RoundedButton text="Region" onPress={regionEntityScreen} testID="regionEntityScreenButton" />
        <RoundedButton text="Country" onPress={countryEntityScreen} testID="countryEntityScreenButton" />
        <RoundedButton text="Location" onPress={locationEntityScreen} testID="locationEntityScreenButton" />
        <RoundedButton text="Department" onPress={departmentEntityScreen} testID="departmentEntityScreenButton" />
        <RoundedButton text="Task" onPress={taskEntityScreen} testID="taskEntityScreenButton" />
        <RoundedButton text="Employee" onPress={employeeEntityScreen} testID="employeeEntityScreenButton" />
        <RoundedButton text="Job" onPress={jobEntityScreen} testID="jobEntityScreenButton" />
        <RoundedButton text="JobHistory" onPress={jobHistoryEntityScreen} testID="jobHistoryEntityScreenButton" />
        {/* ignite-jhipster-entity-screen-needle */}
      </ScrollView>
    )
...
